adding csrf protection and make twig helper to put the csrf in every post form

--- a/resources/views/auth/login.twig
+++ b/resources/views/auth/login.twig
@@ -6,6 +6,7 @@
 <h1>Login</h1>
 
 <form action="/login" method="post">
+    {{ csrf() | raw }}
     <div>
         <label for="email">Email</label>
         <input type="text" name="email" id="email">
