--- a/resources/views/auth/register.twig
+++ b/resources/views/auth/register.twig
@@ -6,6 +6,7 @@
 <h1>Register</h1>
 
 <form action="/register" method="post">
+    {{ csrf() | raw }}
     <div>
         <label for="first_name">First Name</label>
         <input type="text" name="first_name" id="first_name">
